--- a/views/remerasactuales.html
+++ b/views/remerasactuales.html
@@ -115,8 +115,9 @@
           </tbody>
           
         </table>
-        <div>
-          <p style="color: black;" id="precioTotal"></p>
+        <div class="contenedor__completar">
+          <p class="px-4" style="color: black;" id="precioTotal"></p>
+          <button id="completarCompraBtn" class="btn btn-success" onclick="completarCompra()">Completar compra</button>
         </div>
       </div>
       
@@ -203,7 +204,6 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="../js/camisetas.js"></script>
     <script src="../js/index.js"></script>
   </body>
 </html>
